[gd_scene load_steps=5 format=3 uid="uid://3p75v37s067j"]

[ext_resource type="Texture2D" uid="uid://ypg3yjx5i1y" path="res://UI/sprites/FUEL_EMPTY.png" id="1_83jwc"]
[ext_resource type="Script" path="res://UI/ui.gd" id="1_kx7ux"]
[ext_resource type="Texture2D" uid="uid://dxpv5nmumeqta" path="res://UI/sprites/FUEL_FULL.png" id="2_3hbkc"]
[ext_resource type="Texture2D" uid="uid://8n1dsaetuec0" path="res://UI/sprites/LIFE_BAR.png" id="3_csaiq"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kx7ux")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -10.0
offset_top = 13.0
offset_right = 118.0
offset_bottom = 53.0

[node name="CenterContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="FuelBar" type="TextureProgressBar" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
rounded = true
fill_mode = 1
texture_under = ExtResource("1_83jwc")
texture_progress = ExtResource("2_3hbkc")

[node name="LifeBar" type="Sprite2D" parent="VBoxContainer/CenterContainer"]
position = Vector2(65, 0)
texture = ExtResource("3_csaiq")
hframes = 8
frame = 4
